@@ -1,0 +1,43 @@
+<!DOCTYPE node PUBLIC "-//freedesktop//DTD D-BUS Object Introspection 1.0//EN"
+    "http://www.freedesktop.org/standards/dbus/1.0/introspect.dtd">
+<node>
+    <interface name="org.freedesktop.UPower">
+        <method name="HibernateAllowed">
+            <arg name="allowed" type="b" direction="out"/>
+        </method>
+        <method name="Hibernate">
+        </method>
+        <method name="SuspendAllowed">
+            <arg name="allowed" type="b" direction="out"/>
+        </method>
+        <method name="Suspend">
+        </method>
+        <method name="AboutToSleep">
+        </method>
+        <method name="EnumerateDevices">
+            <arg name="devices" type="ao" direction="out"/>
+        </method>
+        <signal name="Resuming">
+        </signal>
+        <signal name="Sleeping">
+        </signal>
+        <signal name="Changed">
+        </signal>
+        <signal name="DeviceChanged">
+            <arg type="s"/>
+        </signal>
+        <signal name="DeviceRemoved">
+            <arg type="s"/>
+        </signal>
+        <signal name="DeviceAdded">
+            <arg type="s"/>
+        </signal>
+        <property name="LidIsPresent" type="b" access="read"/>
+        <property name="LidIsClosed" type="b" access="read"/>
+        <property name="OnLowBattery" type="b" access="read"/>
+        <property name="OnBattery" type="b" access="read"/>
+        <property name="CanHibernate" type="b" access="read"/>
+        <property name="CanSuspend" type="b" access="read"/>
+        <property name="DaemonVersion" type="s" access="read"/>
+    </interface>
+</node>
